// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SlidingPanel #render() calls onTryingToClose function when provided and closes a panel if it doesn't return false 1`] = `
<SlidingPanel
  active={true}
  closeOnOverlayClick={true}
  direction="right"
  onTryingToClose={[Function]}
  width="470px"
>
  <div
    className="ui-sliding-panel-overlay"
    onClick={[Function]}
  >
    <div
      className="ui-sliding-panel ui-sliding-panel_active ui-sliding-panel_right"
      style={
        Object {
          "width": "470px",
        }
      }
    >
      <div
        className="ui-sliding-panel__content"
      >
        Test
      </div>
    </div>
  </div>
</SlidingPanel>
`;

exports[`SlidingPanel #render() calls onTryingToClose function when provided and closes a panel if it doesn't return false 2`] = `
<SlidingPanel
  active={true}
  closeOnOverlayClick={true}
  direction="right"
  onTryingToClose={[Function]}
  width="470px"
>
  <div
    className="ui-sliding-panel-overlay"
    onClick={[Function]}
  >
    <div
      className="ui-sliding-panel ui-sliding-panel_right"
      style={
        Object {
          "width": "470px",
        }
      }
    >
      <div
        className="ui-sliding-panel__content"
      >
        Test
      </div>
    </div>
  </div>
</SlidingPanel>
`;

exports[`SlidingPanel #render() calls onTryingToClose function when provided via props and prevents closing if it returns false 1`] = `
<SlidingPanel
  active={true}
  closeOnOverlayClick={true}
  direction="right"
  onTryingToClose={[Function]}
  width="470px"
>
  <div
    className="ui-sliding-panel-overlay"
    onClick={[Function]}
  >
    <div
      className="ui-sliding-panel ui-sliding-panel_active ui-sliding-panel_right"
      style={
        Object {
          "width": "470px",
        }
      }
    >
      <div
        className="ui-sliding-panel__content"
      >
        Test
      </div>
    </div>
  </div>
</SlidingPanel>
`;

exports[`SlidingPanel #render() calls onTryingToClose function when provided via props and prevents closing if it returns false 2`] = `
<SlidingPanel
  active={true}
  closeOnOverlayClick={true}
  direction="right"
  onTryingToClose={[Function]}
  width="470px"
>
  <div
    className="ui-sliding-panel-overlay"
    onClick={[Function]}
  >
    <div
      className="ui-sliding-panel ui-sliding-panel_active ui-sliding-panel_right"
      style={
        Object {
          "width": "470px",
        }
      }
    >
      <div
        className="ui-sliding-panel__content"
      >
        Test
      </div>
    </div>
  </div>
</SlidingPanel>
`;

exports[`SlidingPanel #render() closes the panel when active prop changes to false 1`] = `
<SlidingPanel
  active={true}
  closeOnOverlayClick={true}
  direction="right"
  width="470px"
>
  <div
    className="ui-sliding-panel-overlay"
    onClick={[Function]}
  >
    <div
      className="ui-sliding-panel ui-sliding-panel_active ui-sliding-panel_right"
      style={
        Object {
          "width": "470px",
        }
      }
    >
      <div
        className="ui-sliding-panel__content"
      >
        Test
      </div>
    </div>
  </div>
</SlidingPanel>
`;

exports[`SlidingPanel #render() closes the panel when active prop changes to false 2`] = `
<SlidingPanel
  active={false}
  closeOnOverlayClick={true}
  direction="right"
  width="470px"
>
  <div
    className="ui-sliding-panel-overlay ui-sliding-panel-overlay_hidden"
    onClick={[Function]}
  >
    <div
      className="ui-sliding-panel ui-sliding-panel_right"
      style={
        Object {
          "width": "470px",
        }
      }
    >
      <div
        className="ui-sliding-panel__content"
      >
        Test
      </div>
    </div>
  </div>
</SlidingPanel>
`;

exports[`SlidingPanel #render() enables [data-rel="close"] element provided on the children, that closes the overlay 1`] = `
<SlidingPanel
  active={true}
  closeOnOverlayClick={false}
  direction="right"
  width="470px"
>
  <div
    className="ui-sliding-panel-overlay"
    onClick={[Function]}
  >
    <div
      className="ui-sliding-panel ui-sliding-panel_active ui-sliding-panel_right"
      style={
        Object {
          "width": "470px",
        }
      }
    >
      <div
        className="ui-sliding-panel__content"
      >
        <button
          data-rel="close"
        >
          Test
        </button>
      </div>
    </div>
  </div>
</SlidingPanel>
`;

exports[`SlidingPanel #render() enables [data-rel="close"] element provided on the children, that closes the overlay 2`] = `
<SlidingPanel
  active={true}
  closeOnOverlayClick={false}
  direction="right"
  width="470px"
>
  <div
    className="ui-sliding-panel-overlay ui-sliding-panel-overlay_hidden"
    onClick={[Function]}
  >
    <div
      className="ui-sliding-panel ui-sliding-panel_right"
      style={
        Object {
          "width": "470px",
        }
      }
    >
      <div
        className="ui-sliding-panel__content"
      >
        <button
          data-rel="close"
        >
          Test
        </button>
      </div>
    </div>
  </div>
</SlidingPanel>
`;

exports[`SlidingPanel #render() opens the panel when active prop changes to true 1`] = `
<SlidingPanel
  closeOnOverlayClick={true}
  direction="right"
  width="470px"
>
  <div
    className="ui-sliding-panel-overlay ui-sliding-panel-overlay_hidden"
    onClick={[Function]}
  >
    <div
      className="ui-sliding-panel ui-sliding-panel_right"
      style={
        Object {
          "width": "470px",
        }
      }
    >
      <div
        className="ui-sliding-panel__content"
      >
        Test
      </div>
    </div>
  </div>
</SlidingPanel>
`;

exports[`SlidingPanel #render() opens the panel when active prop changes to true 2`] = `
<SlidingPanel
  active={true}
  closeOnOverlayClick={true}
  direction="right"
  width="470px"
>
  <div
    className="ui-sliding-panel-overlay"
    onClick={[Function]}
  >
    <div
      className="ui-sliding-panel ui-sliding-panel_active ui-sliding-panel_right"
      style={
        Object {
          "width": "470px",
        }
      }
    >
      <div
        className="ui-sliding-panel__content"
      >
        Test
      </div>
    </div>
  </div>
</SlidingPanel>
`;

exports[`SlidingPanel #render() render active by default and when clicking on the overlay it closes it 1`] = `
<SlidingPanel
  active={true}
  closeOnOverlayClick={true}
  direction="right"
  width="470px"
>
  <div
    className="ui-sliding-panel-overlay"
    onClick={[Function]}
  >
    <div
      className="ui-sliding-panel ui-sliding-panel_active ui-sliding-panel_right"
      style={
        Object {
          "width": "470px",
        }
      }
    >
      <div
        className="ui-sliding-panel__content"
      >
        Test
      </div>
    </div>
  </div>
</SlidingPanel>
`;

exports[`SlidingPanel #render() render active by default and when clicking on the overlay it closes it 2`] = `
<SlidingPanel
  active={true}
  closeOnOverlayClick={true}
  direction="right"
  width="470px"
>
  <div
    className="ui-sliding-panel-overlay ui-sliding-panel-overlay_hidden"
    onClick={[Function]}
  >
    <div
      className="ui-sliding-panel ui-sliding-panel_right"
      style={
        Object {
          "width": "470px",
        }
      }
    >
      <div
        className="ui-sliding-panel__content"
      >
        Test
      </div>
    </div>
  </div>
</SlidingPanel>
`;

exports[`SlidingPanel #render() render header if title prop is passed 1`] = `
<SlidingPanel
  closeOnOverlayClick={true}
  direction="right"
  mods={
    Array [
      "test",
    ]
  }
  title="Test Title"
  width="470px"
>
  <div
    className="ui-sliding-panel-overlay ui-sliding-panel-overlay_hidden"
    onClick={[Function]}
  >
    <div
      className="ui-sliding-panel ui-sliding-panel_test ui-sliding-panel_right"
      style={
        Object {
          "width": "470px",
        }
      }
    >
      <SlidingPanelHeader
        title="Test Title"
      >
        <div
          className="ui-sliding-panel-header"
        >
          <h3
            className="ui-sliding-panel-header__title"
          >
            Test Title
          </h3>
          <button
            className="ui-sliding-panel-header__close-button"
            data-rel="close"
          >
            ×
          </button>
        </div>
      </SlidingPanelHeader>
      <div
        className="ui-sliding-panel__content"
      >
        Test
      </div>
    </div>
  </div>
</SlidingPanel>
`;

exports[`SlidingPanel #render() render with custom width 1`] = `
<SlidingPanel
  closeOnOverlayClick={true}
  direction="left"
  width="720px"
>
  <div
    className="ui-sliding-panel-overlay ui-sliding-panel-overlay_hidden"
    onClick={[Function]}
  >
    <div
      className="ui-sliding-panel ui-sliding-panel_left"
      style={
        Object {
          "width": "720px",
        }
      }
    >
      <div
        className="ui-sliding-panel__content"
      >
        Test
      </div>
    </div>
  </div>
</SlidingPanel>
`;

exports[`SlidingPanel #render() render with default props and mods provided 1`] = `
<SlidingPanel
  closeOnOverlayClick={true}
  direction="right"
  mods={
    Array [
      "test",
    ]
  }
  width="470px"
>
  <div
    className="ui-sliding-panel-overlay ui-sliding-panel-overlay_hidden"
    onClick={[Function]}
  >
    <div
      className="ui-sliding-panel ui-sliding-panel_test ui-sliding-panel_right"
      style={
        Object {
          "width": "470px",
        }
      }
    >
      <div
        className="ui-sliding-panel__content"
      >
        Test
      </div>
    </div>
  </div>
</SlidingPanel>
`;

exports[`SlidingPanel #render() render with left direction 1`] = `
<SlidingPanel
  closeOnOverlayClick={true}
  direction="left"
  mods={
    Array [
      "test",
    ]
  }
  width="470px"
>
  <div
    className="ui-sliding-panel-overlay ui-sliding-panel-overlay_hidden"
    onClick={[Function]}
  >
    <div
      className="ui-sliding-panel ui-sliding-panel_test ui-sliding-panel_left"
      style={
        Object {
          "width": "470px",
        }
      }
    >
      <div
        className="ui-sliding-panel__content"
      >
        Test
      </div>
    </div>
  </div>
</SlidingPanel>
`;

exports[`SlidingPanel #render() with closeOnOverlayClick=false does not close when overlay clicked 1`] = `
<SlidingPanel
  active={true}
  closeOnOverlayClick={false}
  direction="right"
  width="470px"
>
  <div
    className="ui-sliding-panel-overlay"
    onClick={[Function]}
  >
    <div
      className="ui-sliding-panel ui-sliding-panel_active ui-sliding-panel_right"
      style={
        Object {
          "width": "470px",
        }
      }
    >
      <div
        className="ui-sliding-panel__content"
      >
        Test
      </div>
    </div>
  </div>
</SlidingPanel>
`;

exports[`SlidingPanel #render() with closeOnOverlayClick=false does not close when overlay clicked 2`] = `
<SlidingPanel
  active={true}
  closeOnOverlayClick={false}
  direction="right"
  width="470px"
>
  <div
    className="ui-sliding-panel-overlay"
    onClick={[Function]}
  >
    <div
      className="ui-sliding-panel ui-sliding-panel_active ui-sliding-panel_right"
      style={
        Object {
          "width": "470px",
        }
      }
    >
      <div
        className="ui-sliding-panel__content"
      >
        Test
      </div>
    </div>
  </div>
</SlidingPanel>
`;
